# 2025-01-16-countchar

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/countchar/: __init__.py  count_char.py  count_letter.py  example.py
tests/: conftest.py  test_count_letter.py  test_countchar.py  test_file_count_char.py  text.txt
